[package]
name = "tisuos"
version = "0.1.0"
authors = ["1363558876@qq.com <1363558876@qq.com>"]
edition = "2018"

test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tisu-memory = { git = "https://gitee.com/TisuOS/tisu-memory", tag = "v3.1" }

[build]
target="riscv64gc-unknown-none-elf"

test = false