[package]
name = "tisuos"
version = "0.1.0"
authors = ["1363558876@qq.com <1363558876@qq.com>"]
edition = "2018"


[features]
default = ["qemu_riscv", "tisu_memory"]
qemu_riscv = []
tisu_memory = []

[dependencies]
tisu-memory = { git = "https://gitee.com/TisuOS/tisu-memory", tag = "v3.1" }
tisu-sync = { git = "https://gitee.com/TisuOS/tisu-sync", tag = "v3.0" }

macro_derive = { path = "./macro_derive" }

[build]
target="riscv64gc-unknown-none-elf"

test = false
